--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ rvm:
 notifications:
   email: false
   irc:
-    channels:
-    - secure: TDbNpHl7koTSkzDbtKwTRaxIZWl5W8C6vZGqjhQn3eltVokPzReiipQGpNhpUiGiBiO+80AFlEZs2Vc9smTAoTR4LP4jsC4so5fmYV2tS62xOGlVac/K3LcQDVRh9qXcjSt4BA68rsBENuYopVTTdwZE3exY/itE0xrbq3T1MNM=
     template:
     - "%{repository}/%{branch}/%{build_number}: %{message} -- %{build_url}"
+    channels:
+      secure: KIxEFjsxQB5/nuS3hWg22OkR02Z/jYK0UAbnNNHmtXgEYkaZ/e/U5vAdaUvCKZrPXojLHI9aD6AhTLzXtNV/BDgk2v41queJvqhTeSafKsnpdH+8vTQ8VPJfJdLMnEqns+9yOYXQmu6e1VpHwWv8o+3lQbi4rfeAr3mr4wFxNpA=
